<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="200dp"
        android:src="@drawable/calendar"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/txtId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:targetApi="o"
        android:layout_below="@+id/img"
        android:layout_marginTop="100dp"
        android:maxLength="9" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o"
        android:layout_below="@+id/txtId"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark" />

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="50dp"
        android:layout_marginStart="170sp"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/black"
        />

</RelativeLayout>