<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SalaryActivity"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/btnHome"
        layout="@layout/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp" />

    <include
        android:id="@+id/salTitle"
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHome" />

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salTitle"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtMonthYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt1"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_marginBottom="50dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMonthYear"
            android:text="@string/user"
            android:textColor="#000"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt2" />

        <LinearLayout
            android:layout_below="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_marginTop="40dp"
            android:weightSum="5"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/userSalary"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <ListView
                    android:id="@+id/lvShifts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_info"
        android:gravity="center">

        <Button
            android:id="@+id/btnView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/view" />
    </LinearLayout>
</RelativeLayout>